<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">T.V. Fanatic</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search TV Shows</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_tvfanatic">T.V. Fanatic</string>
    <string name="home_my_reviews_title">MY REVIEWS</string>
    <string name="home_recent_comments_title">RECENT COMMENTS</string>
    <string name="home_recently_viewed_title">RECENTLY VIEWED</string>
    <string name="home_my_favorites_title">MY FAVORITES</string>
    <string name="show_creator_value_text">Creator</string>
    <string name="show_starring_label_text">Starring</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="show_title_holder">[Show Title]</string>
    <string name="show_creator_holder">[Series creator]</string>
    <string name="show_actors_holder">[Series actors]</string>
    <string name="show_year_holder">[Start-End]</string>
    <string name="show_season_holder">SEASON ?</string>
    <string name="episode_season_and_number_holder">[S? E?]</string>
    <string name="episode_description_holder">[The episode description goes here. TVDB may call this an overview. Other people might refer to it as a summary.]</string>
    <string name="episode_air_date_holder">12.21.12</string>
    <string name="episode_season_average_label">SEASON AVERAGE</string>
    <string name="review_button_label">Review</string>
    <string name="this_episode_label">THIS EPISODE</string>
    <string name="your_rating_label">YOUR RATING</string>
    <string name="episode_title_holder">[Episode Title]</string>
    <string name="review_by_label">Review by:</string>
    <string name="review_by_value_holder">[Review Author]</string>
    <string name="review_title_holder">[This is the review title]</string>
    <string name="review_content_holder">This is the review content.</string>
    <string name="plus">+</string>
    <string name="comments_heading_text">COMMENTS</string>
    <string name="review_author_holder">[Review Author]</string>
    <string name="review_date_label_holder">12.23.12  3:20 PM</string>
    <string name="write_review_reviewing_text">Reviewing:</string>
    <string name="write_review_reviewing_holder">[Show Name S?E?: Episode title]</string>
    <string name="write_review_title_label">Title:</string>
    <string name="write_review_title_hint">Title of your review</string>
    <string name="write_comment_commenting_text">Reply to:</string>
    <string name="write_comment_title_hint">Title of your comment</string>
    <string name="write_comment_content_hint">Type your comment here</string>
    <string name="done_text">Done</string>
    <string name="episode_show_image_desc">Series poster</string>
    <string name="show_description_holder">This is the description of the show.</string>
    <string name="write_review_content_hint">Type your review here</string>
    <string name="review_agree_label_holder">X% agree</string>
    <string name="review_agree_button_text">Agree</string>
    <string name="review_disagree_button_text">Disagree</string>
    <string name="view_show_epi_elem_number">8</string>
    <string name="view_show_epi_title_holder">[Episode Title]</string>
    <string name="view_show_epi_num_reviews_holder">00 Reviews</string>
    <string name="view_show_epi_date_aired_holder">7.15.12</string>
    <string name="menu_account">Account</string>
    <string name="account_chooser_instructions">Choose an account:</string>
    <string name="account_prefs_title">Manage your account</string>
    <string name="account_prefs_summary">Manage your TV Fanatic account.</string>
    <string name="account_email_title">Change e-mail</string>
    <string name="account_email_summary">Change the e-mail associated with your account.</string>
    <string name="account_email_dialog_title">E-mail</string>
    <string name="account_display_name_title">Display name</string>
    <string name="account_display_name_summary">Set the name that appears on your reviews and comments.</string>
    <string name="account_display_name_dialog_title">Display name</string>
    <string name="account_allow_comments_title">Allow comments</string>
    <string name="account_allow_comments_summary">Allow or disallow other users to comment on your reviews.</string>
    <string name="account_allow_comments_dialog_title">Allow comments</string>
    <string name="account_create_email_label">Email:</string>
    <string name="account_create_display_name_label">Display name:</string>
    <string name="account_create_sign_up_button_text">Sign up</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="you_said">You said:</string>
    <string name="in_reply_to_text">In reply to:</string>
    <string name="comment_target_review">Review</string>
    <string name="comment_reply">Tap to reply</string>
    <string name="review_comment_on">Comment on this review</string>
    <string name="show_series_average_label">SERIES AVERAGE</string>
    <string name="swipe_season_help">Swipe left or right to change seasons</string>
    
</resources>